# clover

./: .gitignore  Cargo.toml  README.md  deno.json  dev.sh  flake.nix  listeners.md  manifest.clover.json  manifest.clover.jsonc  package.json  process-compose.yaml  result  rust-toolchain.toml  rustfmt.toml  shell.nix  todo.md  tsconfig.json
.cargo/: config.toml
.direnv/: flake-profile
.github/workflows/: update-docs.yml
.zed/: settings.json
clover-hub/: Cargo.toml  README.md  dev.sh
clover-hub-macros/: Cargo.toml
clover-hub-macros/src/: lib.rs
clover-hub/src/: lib.rs  logging.rs  main.rs  tui.rs  utils.rs
clover-hub/src/server/: listener.rs  mod.rs  models.rs  websockets.rs
clover-hub/src/server/appd/: docker.rs  ipc.rs  mod.rs  models.rs
clover-hub/src/server/arbiter/: mod.rs  models.rs
clover-hub/src/server/evtbuzz/: listener.rs  mod.rs  models.rs  websockets.rs
clover-hub/src/server/inference_engine/: ipc.rs  mod.rs
clover-hub/src/server/modman/: connections.rs  ipc.rs  mod.rs  models.rs  modules.rs
clover-hub/src/server/modman/busses/: mod.rs  models.rs
clover-hub/src/server/modman/busses/proxies/: app.rs  bt_classic.rs  bt_le.rs  can_2.rs  can_fd.rs  i2c.rs  mod.rs  spi.rs  uart.rs
clover-hub/src/server/modman/components/: mod.rs  models.rs
clover-hub/src/server/modman/components/audio/: impls.rs  mod.rs  models.rs
clover-hub/src/server/modman/components/movement/: impls.rs  mod.rs  models.rs
clover-hub/src/server/modman/components/sensors/: impls.rs  mod.rs  models.rs
clover-hub/src/server/modman/components/video/: mod.rs
clover-hub/src/server/modman/components/video/cameras/: impls.rs  mod.rs  models.rs
clover-hub/src/server/modman/components/video/displays/: impls.rs  mod.rs  models.rs
clover-hub/src/server/modman/displays/: mod.rs
clover-hub/src/server/modman/gestures/: command_generator.rs  mod.rs
clover-hub/src/server/modman/ipc/: displays.rs  gestures.rs  mod.rs
clover-hub/src/server/modman/movement/: mod.rs
clover-hub/src/server/modman/sensors/: mod.rs
clover-hub/src/server/modman/video/: mod.rs
clover-hub/src/server/renderer/: ipc.rs  mod.rs  models.rs
clover-hub/src/server/renderer/display/: mod.rs  shader.frag  shader.vert  vertices.rs
clover-hub/src/server/renderer/system_ui/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/: mod.rs  setup.rs
clover-hub/src/server/renderer/system_ui/systems/displays/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/simulated_controls/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/view_management/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/view_management/canvas/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/view_management/compose/: mod.rs
clover-hub/src/server/renderer/system_ui/systems/view_management/stream/: mod.rs
clover-hub/src/server/warehouse/: ipc.rs  mod.rs  models.rs
clover-hub/src/server/warehouse/config/: mod.rs  models.rs
clover-hub/src/server/warehouse/db/: mod.rs
clover-hub/src/server/warehouse/manifest/: models.rs
clover-hub/src/server/warehouse/repos/: impls.rs  mod.rs  models.rs
clover-hub/src/tui/: mod.rs
core/: README.md  applications.clover.jsonc  expression-packs.clover.jsonc  manifest.clover.json  manifest.clover.jsonc  modules.clover.jsonc
core/applications/: README.md  manifest.clover.json  manifest.clover.jsonc
core/applications/test/: Dockerfile  application.clover.jsonc  manifest.clover.jsonc
core/expression-packs/: manifest.clover.jsonc
core/expression-packs/default/: expression-pack.clover.jsonc
core/gesture-packs/: manifest.clover.json  manifest.clover.jsonc
core/gesture-packs/default/: gesture-pack.clover.json  gesture-pack.clover.jsonc
core/libs/: README.md
core/libs/carbon-fiber/: Cargo.toml  README.md
core/libs/tesseract/: Cargo.toml  README.md
core/modules/: manifest.clover.json  manifest.clover.jsonc
core/modules/3-phase-tail/: module.clover.json
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/clover-hub/: cli.md  intro.md
docs/docs/components/: 00-intro.md  intro.md
docs/docs/developer-guide/: 0-intro.md  1-repository-setup.md
docs/docs/guide/: 0-intro.md
docs/docs/spanner/: intro.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
spanner/: README.md
spanner/spanner-desktop/: package.json
spanner/spanner-desktop/src/: main.rs
spanner/spanner-desktop/src-tauri/: Cargo.toml  tauri.conf.json
toolbox/carbon-steel/: Cargo.toml  README.md
toolbox/carbon-steel/src/: lib.rs
toolbox/ratchet/: .gitignore  Cargo.toml  README.md  build.rs  dev.sh  package.json  tsconfig.json
toolbox/ratchet/qml/: main.qml
toolbox/ratchet/src/: cxxqt_object.rs  main.rs
toolbox/ratchet/src-tauri/: Cargo.toml  tauri.conf.json
toolbox/ratchet/src/app/: index.tsx
toolbox/ratchet/src/app/welcome/: page.tsx
toolbox/ratchet/src/screens/: mod.rs
toolbox/ratchet/src/screens/configurator/: mod.rs  sidebar.rs
toolbox/ratchet/src/screens/configurator/apps/: detail.rs  mod.rs
toolbox/ratchet/src/screens/configurator/gestures/: gesture_detail.rs  mod.rs  pack_detail.rs
toolbox/ratchet/src/screens/configurator/modules/: detail.rs  mod.rs
toolbox/ratchet/src/screens/configurator/overview/: mod.rs
toolbox/ratchet/src/screens/configurator/repos/: detail.rs  mod.rs
toolbox/ratchet/src/screens/welcome/: mod.rs
toolbox/ratchet/src/screens/wizard/: mod.rs
toolbox/ratchet/src/screens/wizard/steps/: connection_type.rs  from_scratch_intro.rs  mod.rs  use_case.rs
toolbox/ratchet/src/util/: get_app_data_dir.rs  menu.rs  mod.rs  open_link.rs  spawn_editor.rs
toolbox/ratchet/src/utils/: i18n.ts
toolbox/ratchet/src/utils/locales/: en.json
toolbox/screwdriver/: README.md  package.json
toolbox/spanner/: .gitignore  README.md  app.json  package-lock.json  package.json  pubspec.yaml
toolbox/spanner/android/: settings.gradle
toolbox/spanner/ios/: Podfile
toolbox/toolbox-lib/: Cargo.toml
website/: README.md  astro.config.mjs  deno.json  package.json
(+130 files in other folders)
