[package]
name = "clover-hub"
version = "1.0.0"
edition = "2021"

[features]
default = ["core", "compositor", "all_busses"]

# Usage specific features
  core = []

# Hardware specific features
  compositor = ["bevy/bevy_winit"]

  # HW busses
  all_busses = ["can", "bt", "spi", "i2c", "uart"]

  can = ["can_fd", "can_2"]
  
    can_fd = ["dep:can", "socketcan"]
  
    # Includes support for CAN 2.0A and 2.0B
    can_2 = ["dep:can", "socketcan"]

  bt = ["bt_classic", "bt_le"]

    bt_classic = ["bluer"]

    bt_le = ["bluer"]

  spi = ["spidev"]

  i2c = ["dep:i2c", "i2cdev"]

  uart = ["uart_16550"]

[dependencies]
# CLI
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
clap = { version = "4.5.4", features = ["derive"] }

# Debugging Tools
log = "0.4.8"
env_logger = "0.11.3"

# Utils that we can't be bothered to write.
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
thiserror = "1.0"
tokio-util = "0.7.12"
overflow-proof = "0.1.0"
decorum = "0.4.0"

# HTTP/WS
api_key = "0.1.0"
url = "2.5.0"
fast_websocket_client = "0.2.0"
warp = "0.3.6"
juniper = "0.16.1"
juniper_warp = "0.8.0"
image = { version = "0.25.5", features = ["serde"] }

# Adding stuff to rust that shoulda been there in the first place.
tokio = { version = "1.40.0", features = ["signal", "macros", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["fs"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }

# Crypto
rand = "0.8.5"

# Tensor Calculations
taurus = { git = "https://github.com/Reboot-Codes/taurus" }
bollard = "0.17.1"
simple-error = "0.3.1"
git2 = "0.19.0"
os_path = "0.8.0"

# Storage
serde_jsonc = "1.0.108"
sea-orm = { version = "1.1.1", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }

# SystemUI
bevy = "0.15.0"

# ModMan Bus Proxies
uart_16550 = { version = "0.3.2", optional = true }
can = { version = "0.2.0", optional = true }
socketcan = { version = "3.3.1", optional = true }
bluer = { version = "0.17.3", optional = true }
spidev = { version = "0.6.0", optional = true }
i2c = { version = "0.1.0", optional = true }
i2cdev = { version = "0.6.1", optional = true }
queues = "1.1.0"
