[package]
name = "clover-hub"
version = "1.0.0"
edition = "2021"

[features]
default = ["core", "compositor", "all_busses"]

# Usage specific features
core = []

# Hardware specific features
compositor = ["bevy/bevy_winit"]

# HW busses
all_busses = ["can", "bt", "spi", "i2c", "uart"]

can = ["can_fd", "can_2"]

can_fd = ["dep:can", "socketcan"]

# Includes support for CAN 2.0A and 2.0B
can_2 = ["dep:can", "socketcan"]

bt = ["bt_classic", "bt_le"]

bt_classic = ["bluer"]

bt_le = ["bluer"]

spi = ["spidev"]

i2c = ["dep:i2c", "i2cdev"]

uart = ["dep:serialport", "dep:tokio-serial"]

[dependencies]
# CLI
crossterm = { version = "0.28.1", features = ["serde"] }
tui = { version = "0.19", default-features = false, features = [
  'crossterm',
  'serde',
] }
clap = { version = "4.5.4", features = ["derive"] }

# Debugging Tools
log = "^0.4.26"
env_logger = "0.11.3"
console-subscriber = "0.5.0"

# Utils that we had to write
clover-hub-macros = { path = "../clover-hub-macros" }

# Utils that we can't be bothered to write.
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
thiserror = "1.0"
tokio-util = "0.7.12"
overflow-proof = "0.1.0"
decorum = "0.4.0"

# HTTP/WS
nexus = { path = "../../nexus" }
url = "2.5.0"
image = { version = "0.25.5", features = ["serde"] }

# Adding stuff to rust that shoulda been there in the first place.
tokio = { version = "1.42.0", features = [
  "signal",
  "macros",
  "sync",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }

# Crypto
rand = "0.8.5"

# Tensor Calculations
taurus = { git = "https://codeberg.org/Reboot-Codes/taurus" }
bollard = "0.17.1"
simple-error = "0.3.1"
git2 = "0.19.0"
os_path = "0.8.0"

# Storage
serde_json_lenient = "0.2.4"
sea-orm = { version = "1.1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }

# SystemUI
bevy = "0.15.0"
can = { version = "0.2.0", optional = true }
socketcan = { version = "3.3.1", optional = true }
bluer = { version = "0.17.3", optional = true }
spidev = { version = "0.6.0", optional = true }
i2c = { version = "0.1.0", optional = true }
i2cdev = { version = "0.6.1", optional = true }
serialport = { version = "4.7.1", optional = true }
tokio-serial = { version = "5.4.5", optional = true }
queues = "1.1.0"
anyhow = "1.0.97"
strum = { version = "0.27.1", features = ["derive"] }
base64 = "0.22.1"
rmp-serde = "1.3.0"
rodio = "0.20.1"
