[package]
name = "ratchet"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "^0.14.0", features = ["tokio"] }
carbon-steel = { path = "../carbon-steel" }
tokio = { version = "1.45.1", features = ["full"] }
serde = "1.0.219"
env_logger = "0.11.8"
anyhow = "1.0.98"
log = "0.4.27"
iced_aw = "0.12.2"
iced_fonts = "0.2.1"
